# stm32f4-project-template

./: .editorconfig  .travis.yml  CMakeLists.txt  LICENSE  README.md  go.sh  toolchain-arm-none-eabi.cmake
lib/: CMakeLists.txt
lib/bandit/: CMakeLists.txt
lib/stm32f4xx/: CMakeLists.txt  version.txt
lib/stm32f4xx/src/: stm32f407vg.S  stm32f407vg.ld  system_stm32f4xx.c
main/: CMakeLists.txt  main.cpp  system.cpp
test/: CMakeLists.txt  main.cpp
test/host/: main.cpp
test/tests/: test.cpp
tools/: run-on-target.sh  run-tests-on-target.sh  stm32f4discovery-stlink-v2-1.cfg  toolchain-arm-none-eabi.cmake
