project(stm32f4xx C ASM)

set(DEVICE_FAMILY STM32F40_41xxx)
get_filename_component(LINKER_SCRIPT src/stm32f407vg.ld ABSOLUTE)

file(GLOB sources src/drivers/*.c src/*.S)
add_library(stm32f4xx ${sources})

target_include_directories(stm32f4xx PUBLIC inc)
target_include_directories(stm32f4xx PUBLIC inc/cmsis)
target_include_directories(stm32f4xx PUBLIC inc/drivers)

target_compile_definitions(stm32f4xx PUBLIC USE_STDPERIPH_DRIVER)
target_compile_definitions(stm32f4xx PUBLIC ${DEVICE_FAMILY})

target_compile_options(stm32f4xx PUBLIC -mlittle-endian)
target_compile_options(stm32f4xx PUBLIC -mthumb)
target_compile_options(stm32f4xx PUBLIC -mcpu=cortex-m4)
target_compile_options(stm32f4xx PUBLIC -mthumb-interwork)
target_compile_options(stm32f4xx PUBLIC -mfloat-abi=hard)
target_compile_options(stm32f4xx PUBLIC -mfpu=fpv4-sp-d16)
target_compile_options(stm32f4xx PUBLIC -ffreestanding)
target_compile_options(stm32f4xx PUBLIC -nostdlib)
target_compile_options(stm32f4xx PUBLIC -flto)
target_compile_options(stm32f4xx PUBLIC -ffunction-sections)
target_compile_options(stm32f4xx PUBLIC -fdata-sections)

target_link_libraries(stm32f4xx PUBLIC -mlittle-endian)
target_link_libraries(stm32f4xx PUBLIC -mthumb)
target_link_libraries(stm32f4xx PUBLIC -mcpu=cortex-m4)
target_link_libraries(stm32f4xx PUBLIC -mthumb-interwork)
target_link_libraries(stm32f4xx PUBLIC -mfloat-abi=hard)
target_link_libraries(stm32f4xx PUBLIC -mfpu=fpv4-sp-d16)
target_link_libraries(stm32f4xx PUBLIC -Wl,--gc-sections)
target_link_libraries(stm32f4xx PUBLIC -T${LINKER_SCRIPT})
target_link_libraries(stm32f4xx PUBLIC -ffreestanding)
target_link_libraries(stm32f4xx PUBLIC -nostdlib)
